# python-playwright-scraper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  scraper.py
scripts/: CategoryPage.py  Pagination.py  scraper.py
src/dataclasses/: ProductData.py  ProductInfo.py
src/page_objects/: CategoryPage.py  Pagination.py  ProductPage.py
src/util/: batch_util.py  browser_util.py  commandline_util.py  csv_util.py
