[tool.poetry]
name = "python-playwright-scraper"
version = "0.1.0"
description = "Playwright experiments"
authors = ["Your Name <you@example.com>"]
license = "BSD"
readme = "README.md"
packages = [{include = "python-playwright-scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
